--- a/src/styles.css
+++ b/src/styles.css
@@ -58,8 +58,8 @@ main {
 
 .weather-app-city {
   margin: 0;
-  font-size: 38px;
-  line-height: 48px;
+  font-size: 42px;
+  line-height: 42px;
 }
 
 .weather-app-details {
@@ -75,17 +75,18 @@ main {
 
 .weather-app-temperature-container {
   display: flex;
+  margin-top: 15px;
 }
 
 .weather-app-temperature {
-  font-size: 66px;
+  font-size: 80px;
   font-weight: bold;
-  line-height: 66px;
+  line-height: 80px;
 }
 
 .weather-app-icon {
-  width: 66px;
-  height: 66px;
+  width: 80px;
+  height: 80px;
 }
 
 .material-symbols-outlined {
@@ -95,6 +96,35 @@ main {
 .weather-app-unit {
   margin-top: 6px;
   font-size: 28px;
+}
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 20px;
+  font-size: 16px;
+}
+
+.weather-forecast-icon {
+  font-size: 30px;
+  text-align: center;
+}
+
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #c852f6;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.weather-forecast-temperature {
+  padding: 0 3px;
 }
 
 footer {
